--- a/index.html
+++ b/index.html
@@ -1624,6 +1624,36 @@
             },
             {
 
+                title: 'Geo Boom',
+                description: 'El juego consiste en una batería de 10 preguntas interactivas de ámbito geográfico en formato BOMBA',
+                url: 'https://idearagon.aragon.es/geojuegos/htm/es/geo-boom.html',
+                author: 'IDE de Aragón',
+                language: 'Español',
+                type: 'Web',
+                img: 'assets/imgs/igear-geoboom.gif'
+            },
+            {
+
+                title: 'Geo Paisaje',
+                description: 'Localiza sobre el mapa de Aragón dónde se encuentra el paisaje que se muestra en la foto',
+                url: 'https://idearagon.aragon.es/geojuegos/htm/es/geo-boom.html',
+                author: 'IDE de Aragón',
+                language: 'Español',
+                type: 'Web',
+                img: 'assets/imgs/igear-geo-paisaje.gif'
+            },
+            {
+
+                title: 'Crea tu ciudad',
+                description: 'Crear tu ciudad añadiendo: carreteras, terrenos, colocar edificios e incluso decorar la ciudad ...',
+                url: 'https://idearagon.aragon.es/geojuegos/htm/es/creatuciudad.html',
+                author: 'IDE de Aragón',
+                language: 'Español',
+                type: 'Web',
+                img: 'assets/imgs/igear-crea-tu-ciudad.gif'
+            },
+            {
+
                 title: 'Carmen San Diego',
                 description: 'Utiliza tus conocimientos para encontrar a Carmen Sandiego o a cualquiera de sus innumerables secuaces.',
                 url: 'https://earth.app.goo.gl/B1Avx5',
@@ -1641,6 +1671,16 @@
                 language: 'Español',
                 type: 'Web',
                 img: 'assets/imgs/seterra.gif'
+            },
+            {
+
+                title: 'Find the ...',
+                description: 'Juega a encontrar la localización de los países o capitales de Europa',
+                url: 'https://codepen.io/rzencoder/full/peEExz',
+                author: 'Adam Hamer',
+                language: 'Inglés',
+                type: 'Web',
+                img: 'assets/imgs/svg-map-game.gif'
             }
 
         ];
