Show message and block game if not WebGL supported

--- a/game/index.html
+++ b/game/index.html
@@ -138,6 +138,27 @@
            id="main-content"
            class="container mt-9 flex-grow-1"
         >
+            <div
+               class="page hidden"
+               id="content-requirements"
+            >
+                <h2>Requisitos mínimos</h2>
+                <p>
+                    Lo sentimos parece que su navegador no soporta WebGL,
+                    puede <a href="https://get.webgl.org/">hacer una doble verificación aquí</a>.
+                </p>
+                <p>
+                    Aquí tienes <a
+                       href="https://doc.arcgis.com/en/arcgis-online/reference/scene-viewer-requirements.htm"
+                    >más información</a>.
+                </p>
+                <p>
+                    Nuestro consejor es que otra persona del equipo sea el/la capitán.
+                </p>
+                <p>
+                    Perdón por las molestias
+                </p>
+            </div>
 
             <div
                class="page hidden"
