Improving messgae for requirements

--- a/game/index.html
+++ b/game/index.html
@@ -144,19 +144,38 @@
             >
                 <h2>Requisitos mínimos</h2>
                 <p>
-                    Lo sentimos parece que su navegador no soporta WebGL,
-                    puede <a href="https://get.webgl.org/">hacer una doble verificación aquí</a>.
+                    Parece que su tarjeta gráfica o navegador no soporta un estándar (<a
+                       href="https://es.wikipedia.org/wiki/WebGL#Soporte"
+                    >WebGL</a>)
+                    que usa Terra Incógnita.
                 </p>
                 <p>
-                    Aquí tienes <a
-                       href="https://doc.arcgis.com/en/arcgis-online/reference/scene-viewer-requirements.htm"
-                    >más información</a>.
+                    A lo mejor puede resolver haciendo lo siguiente: y Puede intentar resolverlo Para poder jugar
+                </p>
+                <ul>
+                    <li>
+                        Actualizando los controladores (drivers) de su tarjeta gráfica (<a
+                           href="https://www.pccomponentes.com/como-actualizar-los-drivers-de-tu-tarjeta-grafica"
+                        >tutorial</a>)
+                    </li>
+                    <li>
+                        Asegurándose que su navegador está actualizado en la última versión. Puedes comprobarlo en: <a
+                           href="https://www.whatismybrowser.com/"
+                        >whatismybrowser.com</a>
+                    </li>
+                    <li>
+                        Comprobando que su navegador soporta WebGL, para ello deberías ver una animación en <a
+                           href="https://get.webgl.org/"
+                        >get.webgl.org</a>
+                    </li>
+                </ul>
+
+                <p>
+                    De no poder ser así, nuestro consejo es que otra persona del equipo o de la organización sea el/la
+                    capitán.
                 </p>
                 <p>
-                    Nuestro consejor es que otra persona del equipo sea el/la capitán.
-                </p>
-                <p>
-                    Perdón por las molestias
+                    Gracias por su comprensión
                 </p>
             </div>
 
