Adding Tysgal logo

--- a/index.html
+++ b/index.html
@@ -1355,6 +1355,28 @@
                             </div>
                         </div>
                     </div>
+
+
+                    <div class="sponsor-grid__item">
+                        <div class="sponsor-grid__logo">
+                            <div class="sponsor-grid__logo__center">
+                                <img
+                                   src="assets/imgs/logo-tysgal.png"
+                                   alt="Logo Abtemas"
+                                >
+                            </div>
+                        </div>
+                        <div class="sponsor-grid__expander">
+                            <div class="sponsor-grid__description">
+                                <h4>Tysgal Consultores - Blog TYS Magazine</h4>
+                                <p>
+                                    Consultoría gallega de Territorio y Sostenibilidad. Especialistas en medio ambiente,
+                                    urbanismo y cartografía.
+                                </p>
+
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
