Adding IDEE logo

--- a/index.html
+++ b/index.html
@@ -1377,6 +1377,29 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="sponsor-grid__item">
+                        <div class="sponsor-grid__logo">
+                            <div class="sponsor-grid__logo__center">
+                                <img
+                                   src="assets/imgs/logo_idee_negro.png"
+                                   alt="Logo IDEE"
+                                >
+                            </div>
+                        </div>
+                        <div class="sponsor-grid__expander">
+                            <div class="sponsor-grid__description">
+                                <h4>IDEE</h4>
+                                <p>
+                                    La <a href="https://www.idee.es/">Infraestructura de Datos Espaciales de España
+                                        (IDEE)</a> es el resultado de la
+                                    integración de todas las IDE establecidas por los productores oficiales de datos,
+                                    tanto a nivel estatal como autonómico y local, y de todo tipo de infraestructuras
+                                    sectoriales y privadas.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
