add two new games

--- a/index.html
+++ b/index.html
@@ -1728,6 +1728,24 @@
                 language: 'Inglés',
                 type: 'Web',
                 img: 'assets/imgs/svg-map-game.gif'
+            },
+            {
+                title: 'WORLDLE',
+                description: 'Juega a encontrar el país representado cada día según su forma en seis intentos. Cada fallo indica la distancia y la dirección del país a adivinar.',
+                url: 'https://worldle.teuteuf.fr/',
+                author: '@teuteuf',
+                language: 'Inglés',
+                type: 'Web',
+                img: 'assets/imgs/worldle.gif'
+            },
+            {
+                title: 'Globle Game',
+                description: 'Juega a encontrar el país misterioso diario. Cada fallo se colorea indicando la distancia al país misterioso.',
+                url: 'https://globle-game.com/',
+                author: 'The Abe Train',
+                language: 'Inglés',
+                type: 'Web',
+                img: 'assets/imgs/globle.gif'
             }
 
         ];
