--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <script>
-    // const host = window.location.hostname;
-    // if (location.protocol !== 'https:' && !(host === 'localhost' || host === "127.0.0.1")) {
-    //     location.replace(`https:${location.href.substring(location.protocol.length)}`);
-    // }
+    const host = window.location.hostname;
+    if (location.protocol !== 'https:' && !(host === 'localhost' || host === "127.0.0.1")) {
+      location.replace(`https:${location.href.substring(location.protocol.length)}`);
+    }
   </script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async
@@ -32,19 +32,19 @@
 
   <!-- COMMON TAGS -->
   <meta charset="utf-8">
-  <title>GeoNight (by AGE), la noche de la Geografía</title>
+  <title>GeoNight (by AGE), the night of Geography</title>
 
   <!-- Search Engine -->
   <meta name="description"
-        content="Iniciativa lúdica puesta en marcha por la Asociación Española de Geografía para poner a prueba tus conocimientos sobre Geografía">
+        content="A playful initiative that brings together a multitude of games to test your knowledge of geography.">
   <meta name="image"
         content="https://geovoluntarios.github.io/geonight/assets/imgs/imagen-meta.jpeg">
 
   <!-- Schema.org for Google -->
   <meta itemprop="name"
-        content="GeoNight (by AGE), la noche de la Geografía">
+        content="GeoNight (by AGE), the night of Geography">
   <meta itemprop="description"
-        content="Iniciativa lúdica puesta en marcha por la Asociación Española de Geografía para poner a prueba tus conocimientos sobre Geografía">
+        content="A playful initiative that brings together a multitude of games to test your knowledge of geography.">
   <meta itemprop="image"
         content="https://geovoluntarios.github.io/geonight/assets/imgs/imagen-meta.jpeg">
 
@@ -52,15 +52,15 @@
   <meta name="twitter:card"
         content="summary with large image">
   <meta name="twitter:title"
-        content="GeoNight (by AGE), la noche de la Geografía">
+        content="GeoNight (by AGE), the night of Geography">
   <meta name="twitter:description"
-        content="Iniciativa lúdica puesta en marcha por la Asociación Española de Geografía para poner a prueba tus conocimientos sobre Geografía">
+        content="A playful initiative that brings together a multitude of games to test your knowledge of geography.">
 
   <!-- Open Graph general (Facebook, Pinterest & Google+) -->
   <meta name="og:title"
-        content="GeoNight (by AGE), la noche de la Geografía">
+        content="GeoNight (by AGE), the night of Geography">
   <meta name="og:description"
-        content="Iniciativa lúdica puesta en marcha por la Asociación Española de Geografía para poner a prueba tus conocimientos sobre Geografía">
+        content="A playful initiative that brings together a multitude of games to test your knowledge of geography.">
   <meta name="og:image"
         content="https://geovoluntarios.github.io/geonight/assets/imgs/imagen-meta.jpeg">
   <meta name="og:url"
@@ -141,20 +141,15 @@
               <a href="index.html?lng=en-US">🇺🇸</a>
             </div>
           </li>
-          <!--
-          <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Otros REAs</a></li>
-          https://datos.gob.es/es/noticia/recursos-educativos-de-libre-acceso-apertura-de-la-ensenanza-y-el-aprendizaje
-          https://blog-idee.blogspot.com/2021/01/la-ide-didactica.html
-        -->
         </ul>
       </div>
     </div>
   </nav>
-  <!-- Masthead-->
+
+
   <header class="masthead bg-primary text-white text-center"
           id="hero">
     <div class="container d-flex align-items-center flex-column">
-      <!-- Masthead Heading-->
       <h1 class="masthead-heading text-uppercase mb1"
           data-i18n="event-title">
         Geography night
@@ -229,7 +224,6 @@
         </div>
       </div>
       <p id="contest-buttons">
-        <!-- href="https://docs.google.com/spreadsheets/d/133QV_QVrhE5lCBv8H13miwkHr5R5sPxCXyy_C4TaOAI/edit#gid=0" --></button>
 
         <a href="https://docs.google.com/forms/d/1aEyp15LtpqtR8oXwYNW3DiveaGrxERiV2PEm7P3CKos/viewform?edit_requested=true"
            class="btn btn-primary btn-lg mr1"
@@ -246,20 +240,7 @@
         </a>
 
       </p>
-      <!-- 
-  <p>
-    Todas las plazas para participar están agotadas, debido al éxito de la convocatoria se está considerando
-    organizar más adelante otras sesiones de juego. Si te interesa participar puedes pre-inscribirte
-    rellenando el siguiente formulario:
-  </p> 
-  <a
-  href="https://docs.google.com/forms/d/e/1FAIpQLSeX_12gVcpSLpT8x14W12cHWQpmFddlNk41fhZQoobwG4ebhw/viewform?usp=sf_link"
-  class="btn btn-primary btn-lg mr1"
-  target="_blank"
-  >
-  Pre-inscribirme a futuras ediciones
-</a> 
--->
+
     </div>
   </section>
 
@@ -391,95 +372,11 @@
         Organized by
       </h3>
       <div class="sponsor-grid__container">
-        <div class="sponsor-grid">
+        <div id="organizers"
+             class="sponsor-grid">
 
 
-          <div class="sponsor-grid__item">
-            <div class="sponsor-grid__logo">
-              <div class="sponsor-grid__logo__center">
-                <img class="logo"
-                     src="assets/imgs/logo_age.png"
-                     alt="Logo AGE">
-              </div>
-            </div>
-            <div class="sponsor-grid__expander">
-              <div class="sponsor-grid__description"
-                   data-i18n="organized-by-age">
-                <h4>Spanish Association of Geography</h4>
-                <p>
-                  The <a href="https://www.age-geografia.es/site/">Spanish Association of Geography</a>
-                  is a group of geography professionals whose main purpose is to promote and develop Spanish geographic
-                  science and its applications and to disseminate and publicize geographic knowledge in society. Since
-                  it was founded in 1975, the AGE has focused its activities on promoting scientific meetings,
-                  coordinating the actions of Spanish geography in society and collaborating with other national and
-                  international geographic associations. Currently the AGE brings together some 1,090 people linked to
-                  geography through teaching, research and the free exercise of the profession of geographer. Among the
-                  activities of the AGE is the celebration every two years of the General Congresses, which are hosted
-                  by the Departments of Geography of the Spanish universities. In alternate years, the Association
-                  organizes conferences to disseminate geography, in order to bring it closer to society and make known
-                  its proposals on current issues. The members of the AGE receive complete information about the
-                  celebration and results of all the activities and obtain economic advantages in the participation.
-                </p>
-                <p>
-                  This initiative is organized through its
-                  <a href="https://www.age-geografia.es/site/geovoluntariado-digital/">
-                    GeoVolunteer Program.
-                  </a>
-                </p>
-              </div>
-            </div>
-          </div>
 
-
-          <div class="sponsor-grid__item">
-            <div class="sponsor-grid__logo">
-              <div class="sponsor-grid__logo__center">
-                <img class="logo"
-                     src="assets/imgs/logo_geodev_nuevo.png"
-                     alt="Logo GeoDevelopers">
-              </div>
-            </div>
-            <div class="sponsor-grid__expander">
-              <div class="sponsor-grid__description"
-                   data-i18n="organized-by-geodevelopers">
-                <h4>GeoDevelopers</h4>
-                <p>
-                  <a href="https://www.geodevelopers.org/">
-                    GeoDevelopers
-                  </a>
-                  is a community of people who since 2014 are
-                  exchanging knowledge about application
-                  development using geo-referenced data and
-                  maps, data visualization, spatial analysis,
-                  etc.
-                </p>
-                <p>
-                  On the
-                  <a href="https://www.youtube.com/channel/UC5Kegds6aV88wjdAhqQ5Wsg">
-                    Youtube channel
-                  </a>
-                  you can find the talks organized to date, and
-                  using the
-                  <a href="https://discord.gg/8pXkBPkvd2">
-                    Discord
-                  </a>
-                  messaging system you can chat with them.
-                </p>
-                <div class="iframe">
-                  <div class="iframe">
-                    <iframe width="320"
-                            height="180"
-                            src="https://www.youtube.com/embed/_vZT9yM0R6Q"
-                            title="YouTube video player"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen>
-                    </iframe>
-                  </div>
-                </div>
-              </div>
-
-            </div>
-          </div>
         </div>
       </div>
 
@@ -522,7 +419,9 @@
               <div class="col-lg-8">
                 <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0"
                     id="contestBasisLabel"
-                    data-i18n="contest-rules-title">Bases del concurso</h2>
+                    data-i18n="contest-rules-title">
+                  Contest rules
+                </h2>
                 <!-- Icon Divider-->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -533,45 +432,75 @@
                 <div class="mb-5 text-left"
                      data-i18n="contest-rules-details">
 
-                  <h2><strong>Participantes:</strong></h2>
-                  <p>El concurso está abierto a jugadores/as jóvenes y adultos/as, de cualquier nivel de formación. El
-                    juego está expresado en español.</p>
-                  <h2><strong>Inscripción y fechas a recordar</strong>:</h2>
-                  <p>Inscripción: <strong> <em> La inscripción es gratuita </em>.</strong></p>
-                  <p>El plazo de inscripción estará abierto hasta el día <em> <strong>30 de marzo. </strong></em></p>
-                  <p>Para jugar y concursar, los jugadores/as deben acceder a la <strong>hoja de inscripción (<a
-                         target="_blank"
-                         href="https://docs.google.com/forms/d/1aEyp15LtpqtR8oXwYNW3DiveaGrxERiV2PEm7P3CKos/viewform?edit_requested=true">aquí</a>),</strong>
-                    seleccionar el día y hora de juego que prefieren, e inscribirse en la sesión de juego
-                    correspondiente.</p>
-                  <p>Las sesiones <strong>se juegan de forma cooperativa en una reunión on-line y cada grupo obtiene una
-                      única puntuación conjunta</strong> con la que compite con la obtenida por los grupos de
-                    jugadores/as de otras sesiones. <strong>Cada sesión de juego admite un máximo de 10
-                      jugadores/as</strong></p>
-                  <p><strong>Las sesiones de juego se celebrarán en formato on-line en distintos tramos horarios de los
-                      días 31 de Marzo y 1 de abril de 2022</strong>. <strong>Los participantes inscritos recibirán una
-                      invitación a la sesión on-line</strong> en la que se desarrollará el juego en grupo.</p>
-                  <p>La<strong> resolución de los enigmas</strong> del juego y los ganadores del concurso </strong>se
-                    harán públicos en una sesión conjunta con todos los jugadores <strong>el día viernes 1 de Abril a
-                      las 22 h una vez finalizadas todas las sesiones de juego</strong> y coincidiendo con la
-                    celebración de Geo-Night en todo el mundo. <strong>La invitación a la Sesión Final del
-                      Juego-Concurso</strong> se adjuntará en el <strong>formulario de inscripción en el día de
-                      celebración.</strong></p>
-                  <h2><strong>Premios:</strong></h2>
-                  <p>Los grupos ganadores recibirán como premio un conjunto de obsequios vinculados a la Geografía:</p>
+                  <h2>
+                    <strong>Participants:</strong>
+                  </h2>
+                  <p>
+                    The contest is open to young and adult players, of any level of education. The game is in
+                    English.
+                  </p>
+                  <h2>
+                    <strong>Registration and dates to remember:</strong>
+                  </h2>
+                  <p>
+                    Registration: <strong>Registration is free of charge </strong>.
+                  </p>
+
+                  <p>
+                    The registration period will be open until <strong>13th of April </strong>.
+                  </p>
+                  <p>
+                    To play and compete, players must access the <strong>registration form ( <a target="_blank"
+                         href="https://docs.google.com/forms/d/1aEyp15LtpqtR8oXwYNW3DiveaGrxERiV2PEm7P3CKos/viewform?edit_requested=true">here</a>)
+                    </strong>, select their preferred day and time of play, and register for the corresponding game
+                    session.
+                  </p>
+                  <p>
+                    The sessions <strong>are played cooperatively
+                      in an on-line meeting and each group obtains a single joint score</strong> to compete with that
+                    obtained by groups of players from other sessions. <strong>Each game session admits a maximum of
+                      10 players</strong>.
+                  </p>
+                  <p>
+                    <strong>
+                      The game sessions will be held in an on-line format in different time slots on 13th and
+                      14th of April, 2023. Registered participants will receive an invitation to the on-line
+                      session
+                    </strong> in which the group game will take place.
+                  </p>
+                  <p>
+                    The <strong>resolution of the game riddles</strong> and the winners of the contest <strong>will be
+                      made public in a joint session with all the players on April 14 at 10 p.m.
+                      after the end of all the game sessions</strong> and coinciding with the celebration of Geo-Night
+                    around the world. <strong>The invitation to the Final Game-Contest Session</strong> will be
+                    attached to the <strong>registration form</strong> on the day of celebration.
+                  </p>
+                  <h2>
+                    <strong>Prizes:</strong>
+                  </h2>
+                  <p>
+                    The winning groups will receive as a prize a set of gifts linked to
+                    Geography:
+                  </p>
                   <ul>
-                    <li>Libros y Atlas de Geo-Planeta: libros relacionados con viajes, descubrimientos, rutas y otras
-                      temáticas geográficas, y atlas de enfoque singular</li>
-                    <li>Libros de Lunwerg&ndash;Planeta relacionados con propuestas de gamificación de contenidos
-                      geográfico (Escape-Maps)</li>
-                    <li>Obsequio de la librería especializada en temática geográfica Mapas y Compañía.</li>
+                    <li>
+                      Books and atlases from Geo-Planeta: books related to travel, discoveries, routes and other
+                      geographic themes, and atlases with a singular approach
+                    </li>
+                    <li>
+                      Books from Lunwerg & Planeta related to gamification proposals of geographic content
+                      (Escape-Maps)
+                    </li>
+                    <li>
+                      Gift from the bookstore specialized in geographic themes Mapas y Compañía.
+                    </li>
                   </ul>
                 </div>
                 <button class="btn btn-primary"
                         data-dismiss="modal">
                   <i class="fas fa-times fa-fw"
                      data-i18n="close-rules"></i>
-                  Cerrar bases
+                  Close rules
                 </button>
               </div>
             </div>
