Language/format updates + Terra Incognita removal

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         Geography night
       </h1>
 
-      <h2 data-i18n="event-date">13th - 14th of April 2023</h2>
+      <h2 data-i18n="event-date">April 13-14, 2023</h2>
       <!-- Icon Divider-->
       <div class="divider-custom divider-light">
         <div class="divider-custom-line"></div>
@@ -177,7 +177,7 @@
     </div>
   </header>
 
-  <section class="page-section"
+<!--   <section class="page-section"
            id="concurso">
     <div class="container">
       <div class="row mb1">
@@ -242,7 +242,7 @@
       </p>
 
     </div>
-  </section>
+  </section> -->
 
   <section class="page-section bg-port-gore"
            id="juegos">
@@ -254,9 +254,8 @@
       </h2>
       <p class="text-center mt-3 small juega"
          data-i18n="play-paragraph">
-        In addition to the contest,
         <strong class="yellow">
-          you can continue to test your knowledge of Geography
+          Test your knowledge of geography
         </strong>
         with the following games.
       </p>
@@ -274,7 +273,7 @@
       <ul id="games"></ul>
       <p class="text-center mt-3 small juega"
          data-i18n="missing-a-game">
-        If you know of a game that is not listed here, please write to us at info@geovoluntarios.org.
+        If you know of a game that is not listed here, please message us at info@geovoluntarios.org.
       </p>
     </div>
   </section>
@@ -291,22 +290,21 @@
           quite unknown by most people.
           <strong class="bg-yellow">If
             you stop anyone on the street and ask: "Do you know
-            what a person with a degree in Geography can do?",
-            there will be few who can say anything more than: read
-            maps, name capitals, rivers or similar things
+            what a person with a degree in geography can do?",
+            there will be few who can say anything more than read
+            maps, name capitals, rivers, or other similar things
           </strong>.
         </p>
         <p>
-          Professionals in Geography are trained for much more, such
-          as: knowing how to
+          Professionals in geography are trained for much more, such
+          as knowing how to conduct
           <a href="https://en.wikipedia.org/wiki/Spatial_planning">
-            manage the territory
+            spatial planning
           </a>, combat climate change and its consequences, fight
           against natural and technological risks, design
           <a href="https://en.wikipedia.org/wiki/Geomarketing">
             geomarketing strategies
-          </a>
-          , use state-of-the-art
+          </a>, use state-of-the-art
           <a href="https://en.wikipedia.org/wiki/Remote_sensing">
             remote sensing
           </a>
@@ -314,20 +312,17 @@
           natural problems through
           <a href="https://en.wikipedia.org/wiki/Spatial_analysis">
             spatial analysis
-          </a>
-          , making them perfect allies to help achieve the
+          </a>, making them perfect allies to help achieve the
           <a href="https://www.un.org/sustainabledevelopment/">
             Sustainable Development Goals
-          </a>
-          , and much more.
+          </a>, and much more.
         </p>
         <p>
           With the aim of highlighting geography and professionals in
           this field,
           <strong class="bg-yellow">
-            the "Geography Night" (
-            <a href="https://www.geonight.net/">geonight.net</a>
-            ) is an international initiative in which one evening
+           "Geography Night" 
+            (<a href="https://www.geonight.net/">geonight.net</a>) is an international initiative in which one evening
             or night a year events are organized simultaneously
             around the world
           </strong>.
@@ -335,11 +330,11 @@
         <p>
           In this way,
           <strong class="bg-yellow">
-            it is intended that anyone has the opportunity to become
+            anyone has the opportunity to become
             familiar with the approach of the geographic discipline,
-            its research work and its usefulness as an applied
-            science to solve the great challenges facing the planet
-          </strong>.
+            its research work, and its usefulness as an applied
+            science to solve the great challenges facing the planet.
+          </strong>
         </p>
         <p>
           Specifically,
@@ -348,15 +343,15 @@
             launched by the Spanish Association of Geography in
             collaboration with other entities
           </strong>
-          to disseminate the contents of Geography, as well as to
+          to disseminate the contents of geography as well as to
           promote the connection between the group of geographers and
-          Geography enthusiasts from different parts of the world.
+          geography enthusiasts from different parts of the world.
         </p>
-        <p>
+<!--         <p>
           The game-contest Terra Incógnita has been created by the AGE
           and the TransUMAntes Network of the UMA, and developed by
           the Spanish GeoDevelopers community.
-        </p>
+        </p> -->
       </div>
       <h3 class="mt-5"
           data-i18n="media-appearences">Media appearances</h3>
@@ -389,7 +384,7 @@
 
       <p class="text-center mt-3 small juega"
          data-i18n="join-partners">
-        If you want to join the contributors, write to us at info@geovoluntarios.org.
+        If you want to join the contributors, message us at info@geovoluntarios.org.
       </p>
 
     </div>
@@ -397,7 +392,7 @@
   </section>
 
 
-  <!-- Contest rules Modal-->
+<!--   <!-- Contest rules Modal-->
   <div class="portfolio-modal modal fade"
        id="contestBasis"
        tabindex="-1"
@@ -508,7 +503,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes)-->
   <div class="scroll-to-top d-lg-none position-fixed">
@@ -525,25 +520,16 @@
           <p>
             <small>
               Website created with ❤️ and the help of volunteers (
-              <a href="https://www.linkedin.com/in/fabri-moles/">
-                Fabri Moles
-              </a>,
-              <a href="https://www.linkedin.com/in/martavillalobos/">
-                Marta Villalobos
-              </a>
-              y
-              <a href="https://www.linkedin.com/in/f%C3%A9lix-franco-rojas-a23557108/">
-                Félix Franco
-              </a>
-              ) partiendo de la plantilla
-              <a href="https://startbootstrap.com/theme/freelancer">
-                Freelancer
-              </a>
-              de Bootstrap. <br>
+              <a href="https://www.linkedin.com/in/fabri-moles/">Fabri Moles</a>,
+              <a href="https://www.linkedin.com/in/martavillalobos/">Marta Villalobos</a>, and
+              <a href="https://www.linkedin.com/in/f%C3%A9lix-franco-rojas-a23557108/">Félix Franco</a>
+              ) built using 
+              <a href="https://startbootstrap.com/theme/freelancer">Freelancer</a>.
+              <br/>
               Source
-              <a href="https://github.com/geovoluntarios/geonight/">
-                code available on GitHub
-              </a>
+                code is available on 
+              <a href="https://github.com/geovoluntarios/geonight/">GitHub
+              </a>.
             </small>
           </p>
         </div>
