--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         Geography night
       </h1>
 
-      <h2 data-i18n="event-date">April 13-14, 2023</h2>
+      <h2 data-i18n="event-date">April 14, 2023</h2>
       <!-- Icon Divider-->
       <div class="divider-custom divider-light">
         <div class="divider-custom-line"></div>
