--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
   </section>
 
 
-<!--   <!-- Contest rules Modal-->
+<!-- Contest rules Modal--> <!-- 
   <div class="portfolio-modal modal fade"
        id="contestBasis"
        tabindex="-1"
