Preparing for 'Sshow all games' button #15

--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
   <!-- GAME TEMPLATE -->
   <div id="game-template"
        style="display:none">
-    <li>
+    <li id="{{elem.id}}">
       <figure class="card card-flip">
         <div class="card text-white">
           <div class="card-img img-fluid"
