Adding translation, minor CSS change and replace old social image

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <meta name="description"
         content="A playful initiative that brings together a multitude of games to test your knowledge of geography.">
   <meta name="image"
-        content="https://geovoluntarios.github.io/geonight/assets/imgs/imagen-meta.jpeg">
+        content="https://geovoluntarios.github.io/geonight/assets/imgs/social-image.jpeg">
 
   <!-- Schema.org for Google -->
   <meta itemprop="name"
@@ -46,7 +46,7 @@
   <meta itemprop="description"
         content="A playful initiative that brings together a multitude of games to test your knowledge of geography.">
   <meta itemprop="image"
-        content="https://geovoluntarios.github.io/geonight/assets/imgs/imagen-meta.jpeg">
+        content="https://geovoluntarios.github.io/geonight/assets/imgs/social-image.jpeg">
 
   <!-- Twitter -->
   <meta name="twitter:card"
@@ -62,7 +62,7 @@
   <meta name="og:description"
         content="A playful initiative that brings together a multitude of games to test your knowledge of geography.">
   <meta name="og:image"
-        content="https://geovoluntarios.github.io/geonight/assets/imgs/imagen-meta.jpeg">
+        content="https://geovoluntarios.github.io/geonight/assets/imgs/social-image.jpeg">
   <meta name="og:url"
         content="https://geovoluntarios.github.io/geonight/">
   <meta name="og:site_name"
@@ -199,7 +199,8 @@
       <ul id="games"></ul>
       <div class="acenter">
         <button class="btn-primary"
-                id="showAllGames">Show games in all languages</button>
+                id="showAllGames"
+                data-i18n="show-all-games">Show games in all languages</button>
       </div>
       <p class="text-center mt-3 small juega"
          data-i18n="missing-a-game">
